# getotp.py

./: README.md  README.rst  pyproject.toml
getotp/: auth.py  client.py  forms.py  models.py  urls.py  views.py
getotp/migrations/: 0001_initial.py
getotp/templates/getotp/login/: start.html
getotp/tests/: conftest.py  login_tests.py
